--- a/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
+++ b/versionStream/charts/jenkins-x/jxboot-helmfile-resources/secret-schema.yaml
@@ -5,55 +5,55 @@ spec:
   - name: jx-pipeline-git-github-github
     mandatory: true
     properties:
-    - name: username
-      key: secret/data/jx/pipelineUser
-      question: the pipeline username
-      help: the user name used by pipelines running in Jenkins X
-      generator: gitOperator.username
-    - name: password
-      key: secret/data/jx/pipelineUser
-      question: the pipeline token or password
-      help: the token or password used by pipelines running in Jenkins X
-      generator: gitOperator.password
+      - name: username
+        key: secret/data/jx/pipelineUser
+        question: the pipeline username
+        help: the user name used by pipelines running in Jenkins X
+        generator: gitOperator.username
+      - name: password
+        key: secret/data/jx/pipelineUser
+        question: the pipeline token or password
+        help: the token or password used by pipelines running in Jenkins X
+        generator: gitOperator.password
   - name: jx-pipeline-git-github-ghe
     mandatory: true
     properties:
-    - name: username
-      key: secret/data/jx/pipelineUser
-      question: the pipeline username
-      help: the user name used by pipelines running in Jenkins X
-      generator: gitOperator.username
-    - name: password
-      key: secret/data/jx/pipelineUser
-      question: the pipeline token or password
-      help: the token or password used by pipelines running in Jenkins X
-      generator: gitOperator.password
+      - name: username
+        key: secret/data/jx/pipelineUser
+        question: the pipeline username
+        help: the user name used by pipelines running in Jenkins X
+        generator: gitOperator.username
+      - name: password
+        key: secret/data/jx/pipelineUser
+        question: the pipeline token or password
+        help: the token or password used by pipelines running in Jenkins X
+        generator: gitOperator.password
   - name: jx-pipeline-git-bitbucket-bitbucket
     mandatory: true
     properties:
-    - name: username
-      key: secret/data/jx/pipelineUser
-      question: the pipeline username
-      help: the user name used by pipelines running in Jenkins X
-      generator: gitOperator.username
-    - name: password
-      key: secret/data/jx/pipelineUser
-      question: the pipeline token or password
-      help: the token or password used by pipelines running in Jenkins X
-      generator: gitOperator.password
+      - name: username
+        key: secret/data/jx/pipelineUser
+        question: the pipeline username
+        help: the user name used by pipelines running in Jenkins X
+        generator: gitOperator.username
+      - name: password
+        key: secret/data/jx/pipelineUser
+        question: the pipeline token or password
+        help: the token or password used by pipelines running in Jenkins X
+        generator: gitOperator.password
   - name: jx-pipeline-git-gitlab-gitlab
     mandatory: true
     properties:
-    - name: username
-      key: secret/data/jx/pipelineUser
-      question: the pipeline username
-      help: the user name used by pipelines running in Jenkins X
-      generator: gitOperator.username
-    - name: password
-      key: secret/data/jx/pipelineUser
-      question: the pipeline token or password
-      help: the token or password used by pipelines running in Jenkins X
-      generator: gitOperator.password
+      - name: username
+        key: secret/data/jx/pipelineUser
+        question: the pipeline username
+        help: the user name used by pipelines running in Jenkins X
+        generator: gitOperator.username
+      - name: password
+        key: secret/data/jx/pipelineUser
+        question: the pipeline token or password
+        help: the token or password used by pipelines running in Jenkins X
+        generator: gitOperator.password
   - name: jenkins-release-gpg
     properties:
     - name: pubring.gpg
@@ -214,8 +214,7 @@ spec:
     properties:
     - name: config.json
       question: Docker JSON Configuration
-      help: This is the docker JSON configuration for authenticating with container
-        registries
+      help: This is the docker JSON configuration for authenticating with container registries
       template: |-
         {
           "auths":{
@@ -322,3 +321,5 @@ spec:
             }
           }
         }
+
+
